# csvreader

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: Cell.h  HashIntRow.h  HashStrInt.h  Parse.h  Row.h  Table.h  errors.h
inlude/: table.h
src/: Cell.c  HashIntRow.c  HashStrInt.c  Parse.c  Row.c  Table.c  main.c  table.c
tests/: test_binary.sh  test_csv.c  test_stress.c
